--- a/app/views/guest_mailer/welcome_back_email.html.erb
+++ b/app/views/guest_mailer/welcome_back_email.html.erb
@@ -8,4 +8,4 @@
 <p>If you have any questions, you can ask us by reply.</p>
 
 <p>&nbsp;</p>
-<p><%= t :wedding_couple_names %></p>
+<p><%= t :party_name %></p>
