--- a/app/views/welcome/_jumbo.html.erb
+++ b/app/views/welcome/_jumbo.html.erb
@@ -1,8 +1,8 @@
 <section id="welcome-index-leader" class="jumbotron text-center">
   <div class="container">
-    <h1 class="jumbotron-heading"><%= t :wedding_couple_names %></h1>
+    <h1 class="jumbotron-heading"><%= t :party_name %></h1>
     <p class="leader-date">
-      <%= t :wedding_date %>, <%= t :wedding_location %>
+      <%= t :party_date %>, <%= t :party_location %>
     </p>
     <p>
       <%= link_to 'RSVP TODAY!', new_guest_path, class: 'btn btn-primary wedding-cta-btn' %>
