--- a/app/views/welcome/_when_where.html.erb
+++ b/app/views/welcome/_when_where.html.erb
@@ -7,22 +7,22 @@
     </div>
     <div class="row">
       <div class="col-md-6 text-center">
-        <h2><%= link_to 'wedding.ics' do -%>
+        <h2><%= link_to 'party.ics' do -%>
           <%= render partial: 'calendar_svg' %>
         <%- end %></h2>
         <p>
-          <strong>12:30pm &ndash; late</strong><br>
-          <%= t :wedding_date %><br>
+          <strong>18:30pm &ndash; late</strong><br>
+          <%= t :party_date %><br>
           &nbsp;<br>
         </p>
-        <p><%= link_to 'Add to Calendar', 'wedding.ics' %></p>
+        <p><%= link_to 'Add to Calendar', 'party.ics' %></p>
       </div>
       <div class="col-md-6 text-center">
         <h2><%= link_to @google_maps_url do -%>
           <%= render partial: 'map_marker_svg' %>
         <%- end %></h2>
         <p>
-          <%= render partial: 'wedding_address' %>
+          <%= render partial: 'party_address' %>
         </p>
         <p>
           <%= link_to 'Google Maps', @google_maps_url %>
